# newsparser

./: manage.py  pyproject.toml
newsparser/: __init__.py
newsparser/dataclasses/: __init__.py  htmlcontent.py
test/: test_newsparser.py
test/data/htmls/: 0.html  1.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html
test/data/urls/: urls.csv
