[tool.poetry]
name = "newsparser"
version = "0.1.0"
description = ""
authors = ["takeshi0406 <sci.and.eng@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.1"
dataclasses_json = "^0.5.2"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
autopep8 = "^1.5.4"
black = "^20.8b1"
flake8 = "^3.8.3"
requests = "^2.24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
